--- a/CV.html
+++ b/CV.html
@@ -1,17 +1,32 @@
-<p style="color:white">CV Jakob</p>
 
-<h1>CV Jakob</h1>
-<head>
-    <style>
-        p{
-            font-style: normal;
-            font-weight: bold;
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 16px;
-            line-height: 1.2;
-            text-decoration: underline;
-            text-align: center;
-            color:black
-        } </style>
-        </head>
+<!doctype html>
+<html lang="eng">
+    <head> partie pas visible
+        <meta charset="utf-8">   
+        <style>
+            p{
+                font-style: normal;
+                font-weight: bold;
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: 16px;
+                line-height: 1.2;
+                text-decoration: underline;
+                text-align: center;
+                color:black
+            } </style>
+    </head>
+
+<body> parti visible
+    <h1>CV Jakob</h1>
+    <p>Testtex Anzeige</p>
+    <main>
+        <h1>TEXT TEST</h1>
+
+    </main>
+
+
+</body>
+</html>
+
+
         
