--- a/CV.html
+++ b/CV.html
@@ -36,7 +36,7 @@
     </table> 
  <br>Menu
     <nav class="crumbs">
-        <ul>
+        <ol>
             <li class="crumb"><a href="#Éducation">Éducation</a></li>
             <li class="crumb"><a href="#Expérience professionnelle">Expérience professionnelle</a></li>
             <li class="crumb"><a href="#Competénce internationale et interculturelle">Competénce internationale et interculturelle</a></li>
@@ -44,11 +44,11 @@
             <li class="crumb"><a href="#Function honorifique">Function honorifique</a></li>
             <li class="crumb"><a href="#Interesses">Interesses</a></li>
             <li class="crumb"><a href="#Contact">Contact</a></li>
-        </ul>
+        </ol>
     </nav>
  
 
-    <p href="Éducation">Éducation</p>
+    <p id="Éducation">Éducation</p>
     <table width="100%">
         <col style="width:20%">
         <col style="width:80%">
@@ -65,7 +65,7 @@
         <td><b>Gymansium Johanneum Homburg </b> <br>   Baccalauréat</td>
     </tr>
 </table>
-    <p href="Expérience professionnelle">Expérience professionnelle</p>
+    <p id="Expérience professionnelle">Expérience professionnelle</p>
     <table width="100%">
         <col style="width:20%">
         <col style="width:80%">
@@ -84,7 +84,7 @@
             <td> <b>Enercon GmbH </b> <br>   Project Management Windturbines</td>
         </tr>
     </table>
-    <p href="Competénce internationale et interculturelle">Competénce internationale et interculturelle</p>
+    <p id="Competénce internationale et interculturelle">Competénce internationale et interculturelle</p>
     <table width="100%">
         <col style="width:20%">
         <col style="width:80%">
@@ -97,7 +97,7 @@
             <td> <b>Gymnasium Johanneum </b><br> Plusieurs échanges franco-allemands </td> 
         </tr> 
     </table>
-    <p href="#Qualifications supplémentaires">Qualifications supplémentaires</p>
+    <p id="#Qualifications supplémentaires">Qualifications supplémentaires</p>
     <table width="100%">
         <col style="width:20%">
         <col style="width:80%">
@@ -114,7 +114,7 @@
             <td > Anglais (courant), Espagnol (courant), Français (bien)</td>
         </tr>
     </table>
-    <p href="#Function honorifique">Function honorifique</p>
+    <p id="#Function honorifique">Function honorifique</p>
     <table width="100%">
         <col style="width:20%">
         <col style="width:80%">
@@ -127,10 +127,10 @@
             <td > <b>Kármán </b><br> Photojournaliste au journal des étudiants de l'université RWTH Aachen  </td>
         </tr>
     </table>
-    <p href="#Interesse">Interesses</p>
+    <p id="#Interesse">Interesses</p>
     Le bouldering, l'escalade, la photographie, les voyage, l'alpinisme
     
-    <p href="#Contact">Contact</p>
+    <p id="#Contact">Contact</p>
     <form action=”mailto:contact@whatever_ece.com”
     method=”POST”
     enctype=”multipart/form-data”
